style.css
* {
  box-sizing: border-box;
}


body {
    background-color: #FFFAFA;
    font-family: 'Darker Grotesque', sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

#navBar {
    font-weight: 400;
    display: flex;
    justify-content: space-between;
    font-size: 23px;
    padding: 20px;
}

#leftNav {
    margin-left: 140px;
}

#rightNav {
    margin-right: 140px;
    width: 250px;
    display: flex;
    justify-content: space-between;
}

a {
    text-decoration: none;
    color: #000000;
}

a:hover {
    transition: 0.2s ease-in;
    color: #A9A9A9;
}

#mainP{
    display: flex;
    justify-content: center;
    font-size: 27px;
    font-weight: 400;
    flex-direction: row;
    padding-top: 30px;
}

#under {
    display: flex;
    justify-content: center;
    font-size: 20px;
    font-weight: 400;
}

main {
    flex-grow: 1;
}
footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-grow: 0;
}

header {
    flex-grow: 0;
}

#links {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    width: 125px;
}

.photoSide {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    font-weight: 400;
    font-size: 20px;
    width: 450px;
}

#photoCaption {
    display: flex;
    width: 420px;
    justify-content: center;
}

#aboutP {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    font-weight: 400;
    font-size: 20px;
    width: 550px;
}

#hello {
    font-weight: 400;
    font-size: 30px;
}

#swfPhoto {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 400px;
    height:300px;
    background-color: black;
}

.photoSide:hover .photo {
    opacity: 0.3;
}

.photo {
    transition: .5s ease;
}

.items {
    display: flex;
    flex-direction: column;
    margin-left: 160px;
    margin-right: 160px;
    padding-top: 20px;
}

.eachItem {
    display: flex;
    flex-direction: row;
        margin-bottom: 20px;
}

.worksWords {
    font-size: 20px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    font-weight: 400;
    width: 650px;
}

.title {
    font-size: 30px;
    font-weight: 500;
}

.subtext {
    color: grey;
    font-size: 17px;
}

